# Crypto-MEV-Simulator-Frontrunning-Bot

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example
config/: default_config.json
docs/: architecture.md
monitoring/: prometheus.yml
scripts/: setup_node.sh
src/: config.cpp  config.hpp  main.cpp
src/simulator/: Simulator.hpp
src/strategy/: Arbitrage.hpp  BaseStrategy.hpp
src/utils/: Logger.cpp  Logger.hpp  Metrics.hpp
tests/: CMakeLists.txt  unit_tests.cpp
